test/modules/logger.js
/* eslint-disable strict */'use strict';/* eslint-enable */
/* global describe it */

// var expect = require('chai').expect;
// var utils = require('../../src/logger.js');

// --------------------------------
// Functions

// --------------------------------
// Suite of tests

describe('logger', function () {
    // log
    describe('log', function () {
        it.skip('should log message', function () {
            // TODO: Stubs?
        });

        it.skip('should log message with module', function () {
            // TODO: Stubs?
        });
    });

    // warn
    describe('warn', function () {
        it.skip('should warn message', function () {
            // TODO: Stubs?
        });

        it.skip('should warn message with module', function () {
            // TODO: Stubs?
        });
    });

    // error
    describe('error', function () {
        it.skip('should error message', function () {
            // TODO: Stubs?
        });

        it.skip('should error message with module', function () {
            // TODO: Stubs?
        });
    });
});
